--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,8 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-body , #root{
+body,
+#root {
   min-height: 100dvh;
 }
 @layer base {
@@ -47,7 +50,6 @@ body , #root{
 
   /* dark color theme */
   @media (prefers-color-scheme: dark) {
-    
     .dark {
       /* text and background */
       --color-bg: 2 18 11;
@@ -87,4 +89,8 @@ body , #root{
       --color-accent-darker: 22 72 46;
     }
   }
+}
+
+.custom-box-shadow {
+  box-shadow: 4px 2px 20px 0px #5CA5B1;
 }
